# 3gpp-meeting-tools

./: 3GPP Meeting Helper.sln  AUTHORS  LICENSE  LICENSING  README.md  file-header.txt
3GPP Tools/: README.md  pyproject.toml  requirements.txt
3GPP Tools/src/: main_puml2visio.py  main_tools.py  main_window.py
3GPP Tools/src/core/: queue_manager.py
3GPP Tools/src/core/config/: config.py  plot_styles.py  source_companies.py
3GPP Tools/src/core/network/: network_state.py  session.py  wifi_monitor.py
3GPP Tools/src/core/ui/: ui_components.py  ui_panels.py
3GPP Tools/src/core/utils/: company_sanitizer.py  paths.py  utils.py
3GPP Tools/src/modules/emails/: plugin_loader.py
3GPP Tools/src/modules/emails/core/: contributor_names.py  email_db.py  email_parser.py  email_threads.py  outlook_client.py  statistics_threads.py
3GPP Tools/src/modules/emails/ui/: config_dialog.py  email_models.py  email_window.py
3GPP Tools/src/modules/meetings/: plugin_loader.py
3GPP Tools/src/modules/meetings/core/: company_sanitizer.py  compare_manager.py  llm_exporter.py  markdown_exporter.py  meetings_db.py  scraper.py  settings.py  statistics_exporter.py  tdoc_file_handler.py  tdocs_cacher.py  tdocs_db.py  tdocs_downloader.py  tdocs_parser.py  tdocs_threads.py  url_router.py
3GPP Tools/src/modules/meetings/ui/: dialogs.py  models.py  search_controller.py  tdoc_delegates.py  tdocs_components.py  tdocs_dialogs.py  tdocs_menus.py  tdocs_models.py  tdocs_window.py  ui_tabs.py
3GPP Tools/src/modules/puml2visio/: main.py  plugin_loader.py
3GPP Tools/src/modules/puml2visio/config/: paths.py
3GPP Tools/src/modules/puml2visio/core/: ascii_converter.py  live_preview.py  plugin_loader.py  powerpoint_converter.py  pptx2visio_converter.py  queue_manager.py  visio2pptx_converter.py  visio_converter.py  (+1 more)
3GPP Tools/src/modules/specifications/: plugin_loader.py
3GPP Tools/src/modules/word_tools/: plugin_loader.py
puml2visio/: README.md  docx_splitter.py  live_preview.py  main_window.py  plantuml_templates.py  powerpoint_converter.py  process_manager.py  puml2visio.py  pyproject.toml  queue_manager.py  requirements.txt  ui_components.py  ui_panels.py  ui_tabs.py  utils.py  visio_backend.py  visio_converter.py  word_comparator.py
puml2visio/src/puml2visio/: main.py
puml2visio/src/puml2visio/core/: live_preview.py  powerpoint_converter.py  queue_manager.py  visio_converter.py
puml2visio/src/puml2visio/ui/: main_window.py  ui_panels.py  ui_tabs.py
puml2visio/src/puml2visio/utils/: paths.py
(+210 files in other folders)
