[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "3GPP Tools"
version = "2.0.0"
description = "A multi-threaded document conversion and comparison tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "pywin32>=306",
    "python-docx>=1.1.0",
    "requests>=2.25.1"
]

[project.scripts]
# This magical line lets you type 'puml2visio' in your terminal anywhere to launch the app!
3gpp-tools = "modules.puml2visio.main:main"