[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "3GPP Tools"
version = "2.0.0"
description = "A multi-threaded document conversion and comparison tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "pywin32>=306",
    "python-docx>=1.1.0",
    "requests>=2.25.1",
    "beautifulsoup4>=4.15.0",
    "openpyxl>=3.1.0",
    "pandas>=1.3.0",
    "plotly>=5.10.0",
    "networkx>=2.8.0"
]

[project.scripts]
3gpp-tools = "main_puml2visio:main"